<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_all_books"
            android:icon="@drawable/ic_books"
            android:title="@string/all_books" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/downloads" />
        <item
            android:id="@+id/nav_recently_read"
            android:icon="@drawable/ic_history"
            android:title="@string/recently_read" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />
    </group>
    <group android:id="@+id/group_secondary">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>
